Bug 1253995 - Display stale image in nsImageFrame if we have a new src but haven't decoded it yet - r=seth a=ritu